Fix button spacing

--- a/src/main/resources/public/css/srcref.css
+++ b/src/main/resources/public/css/srcref.css
@@ -41,7 +41,7 @@ a.top-right:hover {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 4px 4px;
     cursor: pointer;
     border-radius: 12px;
 }
